--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -1,9 +1,36 @@
 <%include ../partials/header.ejs %>
-
-  <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Welcome to <%= title %> </h1>
-
   
+<h3>Leave your information below: </h3>
+    <form class="form" method="POST" action="/contact">
+      <div class="form-group">
+        <label for="FirstNameTextField">First Name</label>
+        <input type="text" placeholder="Enter First Name" class="form-control" id="FirstNameTextField"
+          name="firstName" required>
+      </div>
+      <div class="form-group">
+        <label for="LastNameTextField">Last Name</label>
+        <input type="text" placeholder="Enter Last Name" class="form-control" id="LastNameTextField"
+          name="lastName" required>
+      </div>
+      <div class="form-group">
+        <label for="ContactNumTextField">Contact number</label>
+        <input type="text" placeholder="Enter phone number" class="form-control" id="ContactNumTextField"
+          name="contactNumber" required>
+      </div>
+  
+      <div class="form-group">
+        <label for="EmailTextField">Email address</label>
+        <input type="text" placeholder="Enter email address" class="form-control" id="EmailTextField"
+          name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="MessageTextField">Message</label>
+        <input type="text" placeholder="Leave me your message" class="form-control" id="MessageTextField"
+          name="message" required>
+      </div>
+  
+      <button type="submit" class="btn btn-primary">
+        <i class="fa fa-check-square-o"></i> Submit</button>
+    </form>
 
-  <%include ../partials/footer.ejs %>
+    <%include ../partials/footer.ejs %>
