--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,5 +1,12 @@
-<p>Nusrat Jahan</p>
-      <p>I am a student of Software Engineering Technology in Centennial College.</br>
-      Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</p>
 
-      <a class="btn btn-primary" href="#" role="button">Have a look in my resume</a>
+<%include ../partials/header.ejs %>
+
+<p>Nusrat Jahan</p>
+  <img src="Assets/images/Nusrat_logo.jpg" width="300px" height="100px"/>
+  <p>I am a student of Software Engineering Technology in Centennial College.</br>
+    Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</p>
+
+  <a class="btn btn-primary" href="/Assets/files/Nusrat_Resume.pdf" target="_blank" role="button">Have a look in my resume</a>
+  <a class="btn btn-primary" href="/projects" role="button">Check my project works</a>
+
+  <%include ../partials/footer.ejs %>
