--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,12 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title><%= title %></title>
   <!-- CSS Section-->
-  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
-  <link rel="stylesheet" href="Content/app.css" />
+  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="/Content/app.css" />
 </head>
 
 <body>
+  <div>
+      <img src="Assets/images/Nusrat_logo.jpg" width="300px" height="100px"/>
+  </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <h4 class="text-white">Nusrat Jahan - 300967157</h4>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
