--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,7 @@
+<div id="footer">
+    <p class="p-3">&copy;copyright - Nusrat Jahan, std. Id: 300967157, COMP 308 - Emerging Technology.</p>
+</div>
+
 <!-- JavaScript Section -->
 <script src="/jquery/dist/jquery.min.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
