--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,53 +13,56 @@
 </head>
 
 <body>
-  <div>
-      <img src="Assets/images/Nusrat_logo.jpg" width="300px" height="100px"/>
+  <div class="fixed-top">
+  <div id="logoDiv">
+    <img src="Assets/images/Nusrat_logo01.png" width="300px" height="100px" />
   </div>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <h4 class="text-white">Nusrat Jahan - 300967157</h4>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <% if(title == "Home") { %>
-        <li class="nav-item active"><% } else { %></li>
+        <li class="nav-item active bg-secondary"><% } else { %></li>
         <li class="nav-item">
           <% } %>
 
-          <a class="nav-link" href="/"><i class="fa fa-lg fa-home"></i> Home
+          <a class="nav-link text-white" href="/"><i class="fa fa-lg fa-home"></i> Home
             <span class="sr-only">(current)</span></a>
         </li>
 
         <% if(title == "About Me") { %>
-        <li class="nav-item active"><% } else { %></li>
+        <li class="nav-item active bg-secondary"><% } else { %></li>
         <li class="nav-item">
           <% } %>
 
-          <a class="nav-link" href="/about"><i class="fa fa-lg fa-info"></i> About Me</a>
+          <a class="nav-link text-white" href="/about"><i class="fa fa-lg fa-info"></i> About Me</a>
         </li>
 
         <% if(title == "Projects") { %>
-        <li class="nav-item active"><% } else { %></li>
+        <li class="nav-item active bg-secondary"><% } else { %></li>
         <li class="nav-item">
           <% } %>
 
-          <a class="nav-link" href="/projects"><i class="fa fa-lg fa-briefcase"></i> Projects</a>
+          <a class="nav-link text-white" href="/projects"><i class="fa fa-lg fa-briefcase"></i> Projects</a>
         </li>
 
         <% if(title == "Services") { %>
-        <li class="nav-item active"><% } else { %></li>
+        <li class="nav-item active bg-secondary"><% } else { %></li>
         <li class="nav-item">
           <% } %>
 
-          <a class="nav-link" href="/services"><i class="fa fa-lg fa-birthday-cake"></i> Services</a>
+          <a class="nav-link text-white" href="/services"><i class="fa fa-lg fa-bell"></i> Services</a>
         </li>
 
         <% if(title == "Contact") { %>
-        <li class="nav-item active"><% } else { %></li>
+        <li class="nav-item active bg-secondary"><% } else { %></li>
         <li class="nav-item">
           <% } %>
 
-          <a class="nav-link" href="/contact"><i class="fa fa-lg fa-phone"></i> Contact</a>
+          <a class="nav-link text-white" href="/contact"><i class="fa fa-lg fa-phone"></i> Contact</a>
         </li>
       </ul>
     </div>
   </nav>
+  </div>
+  
