--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,12 +1,30 @@
-
 <%include ../partials/header.ejs %>
 
-<p>Nusrat Jahan</p>
-  <img src="Assets/images/Nusrat_logo.jpg" width="300px" height="100px"/>
-  <p>I am a student of Software Engineering Technology in Centennial College.</br>
-    Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</p>
+<div id="aboutPage">
 
-  <a class="btn btn-primary" href="/Assets/files/Nusrat_Resume.pdf" target="_blank" role="button">Have a look in my resume</a>
-  <a class="btn btn-primary" href="/projects" role="button">Check my project works</a>
+  <div style="float: left;" class="p-5 m-5">
 
-  <%include ../partials/footer.ejs %>
+    <figure>
+      <img src="Assets/images/Nusrat_pic.jpg" alt="Nusrat profile pic"
+        style="width:175px; height:275px; border: 1px solid #000;" />
+      <figcaption class="font-weight-bold p-4">Nusrat Jahan</figcaption>
+    </figure>
+  </div>
+
+  <div class="w-75 ml-5 p-5">  
+      <h4 class="m-5 p-5 text-center">I am a student of Software Engineering Technology in Centennial College.</br>
+        Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</h4>
+
+      <div class="ml-5 p-3 text-center">
+        <a class="btn btn-info" href="/Assets/files/Nusrat_Resume.pdf" alt="Nusrat resume" target="_blank"
+          role="button">Have a look in my resume</a></br></br>
+        <a class="btn btn-info" href="/projects" role="button">Check my project works</a>
+
+      </div>
+
+  </div>
+
+</div>
+
+
+<%include ../partials/footer.ejs %>
