--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,19 +1,22 @@
 <%include ../partials/header.ejs %>
 
-<div class="container">
+<div class="jumbotron jumbotron-fluid mb-0" id="homePage">
 
-  <h2 class="display-4">Be peace upon you all! </h2>
-  <h3>Welcome!!</br>
-    This is the online portfolio of Nusrat Jahan,</br>
-    student of Software Engineering Technology,</br>
-    Centennial College.
-  </h3>
+<div class="container text-white text-center">
 
-
-  <h1>I make people tell their stories through web.</h1>
-
-  <a class="btn btn-primary" href="/about" role="button">Know more About Me</a>
-
+    <h3 class="display-4 mb-5">Be peace upon you all! </h3>
+    
+    <h3 class="display-5 mt-5 mb-5">Welcome!!</br>
+      This is the online portfolio of <strong class="font-italic text-danger">Nusrat Jahan</strong>,</br>
+      student of Software Engineering Technology,</br>
+      Centennial College.
+    </h3>
+ 
+    <h3><blockquote class="font-italic mb-5">I make people tell their stories through web.</blockquote></h3>
+  
+    <a class="btn btn-primary mt-5" href="/about" role="button">Know more About Me</a>
+  
+</div>  
 </div>
 
 <%include ../partials/footer.ejs %>
