updated project, services and contact pages

--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -13,6 +13,16 @@
     background-color: red;
 }
 
+#socialIcon{
+    float: right;
+    padding-top: 20px;
+}
+
+#socialIcon ul li{
+    display: inline-block;
+    
+}
+
 /* footer*/
 #footer{
     background-color: black;
@@ -28,5 +38,71 @@
     background-color: lightgray;
 }
 
+/* Project Page*/
+
+#projectPage{
+    margin-top: 150px;
+    padding-bottom: 30px;
+    background-color: lightgray;
+}
 
 
+.projecthead{
+    margin-top: 50px;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    
+}
+
+/* Service Page */
+#servicePage{
+    margin-top: 150px;
+    padding: 10px;
+    background-color: lightgray;
+    
+}
+.servicehead{
+    margin-top: 50px;
+    margin-left: 50px;
+    padding-top: 50px;
+    padding-bottom: 30px;
+    
+}
+/* Image gallery*/
+#imageGallery{
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    background-color: beige;
+    height: 800px;
+}
+#imageGallery .gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 300px;
+  }
+  
+  #imageGallery .gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  #imageGallery .gallery img {
+    padding: 10px;
+  }
+  
+  #imageGallery .desc {
+    padding: 15px;
+    text-align: center;
+  }
+
+ /* Image gallery*/
+ #contactPage{
+    margin-top: 150px;
+    padding: 10px;
+    background-color: lightgray;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+ }
