--- a/views/home/project.ejs
+++ b/views/home/project.ejs
@@ -1,21 +1,97 @@
 <%include ../partials/header.ejs %>
-<p class="display-4">My Project works in Centennial College</p>
-<ul>
-  <li>
-    Web Development 1</br>
-    with HTml 5 and CSS 3
-  </li>
-  </hr>
-  <li>
-    Web Development 2</br>
-    with ASP.Net Core MVC
-  </li>
-  </hr>
-  <li>
-    Java
-  </li>
-  </hr>
 
-</ul>
+<div id="projectPage">
+
+  <div>
+
+    <h3 class="text-primary font-weight-bold projecthead">
+        My Project works in Centennial College</h3>
+    <div class="ml-auto mr-auto pl-5 w-75">
+
+      <!--  Description and imges of projects -->
+
+      <table class="table table-striped p-5 table-hover">
+
+        <!--  Project 01 -->
+        <tr class="table-dark">
+          <td>
+            <h4 class="text-center pt-5 text-dark">Web Interface Design</br>
+              with HTml 5 and CSS 3</h4>
+            <p class="lead pt-5 font-weight-normal text-dark">
+              This project was about creating a Car dealership Website using HTml 5 and CSS 3 in Dynamic Web Template.
+              As it was an individual assignment, I created the whole website by myself.
+            </p>
+          </td>
+          <td><img src="./Assets/images/Project01.jpg" alt="Web Interface Design project"
+              style="width:300px; height:300px;"></td>
+
+        </tr>
+
+        <!--  Project 02 -->
+
+        <tr class="table-light">
+
+          <td class="text-center pt-5"><img src="./Assets/images/Project02.jpg"
+              alt="Client-side Web Development project" style="width:300px; height:300px;"></td>
+          <td>
+            <h4 class="text-center pt-5 text-dark">Client-side Web Development</br>
+              with ASP.Net Core MVC</h4>
+            <p class="lead pt-5 font-weight-normal text-dark">
+              My team created a Course Handling website using ASP.Net Core 2 in MVC framework.
+              This website allowed registered students view, enroll courses and non-authinticated users could only
+              register and view courses. Authinticated and authorized admin could create, read, update and delete (CRUD)
+              courses.</br>
+              As a team member, I worked with adding contents, CRUD functionality, pagination and CSS.
+            </p>
+          </td>
+
+        </tr>
+
+        <!--  Project 03 -->
+        <tr class="table-dark">
+          <td>
+            <h4 class="text-center pt-5 text-dark">Unix/Linux Operating System</h4>
+            <p class="lead pt-5 font-weight-normal text-dark">
+              In this course, I was assigned to create a website of my own choice on a Linux
+              operating system using PHP programming. I expressed my passion about nature and
+              represented natural beauty of my home country through this website.</br>
+              In this project, I used Ubuntu which is a free and open-source Linux distribution based on Debian.
+              By this work, I learned how to manage files, use UNIX utilities and develope scripts.
+
+
+
+            </p>
+          </td>
+          <td class="text-center pt-5"><img src="./Assets/images/Project03.png"
+              alt="Unix/Linux Operating System project" style="width:300px; height:300px;"></td>
+
+        </tr>
+
+        <!--  Project 04 
+                    <tr class="table-secondary">
+                        
+                        <td><img src="./Assets/images/Project04.jpg" alt=""
+                          style="width:300px; height:300px;"></td>
+                          <td class="text-center pt-5 w-50 font-weight-bold text-dark">Programming 3</br>
+                            with C# .Net Core
+                            <p>
+
+                            </p>
+                          </td>
+            
+                      </tr>
+                    -->
+
+
+      </table>
+
+
+
+    </div>
+
+
+  </div>
+</div>
+
 
 <%include ../partials/footer.ejs %>
