--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,7 +16,37 @@
   <div class="fixed-top">
   <div id="logoDiv">
     <img src="Assets/images/Nusrat_logo01.png" width="300px" height="100px" />
+    <div id="socialIcon">
+      <ul>
+        <li>
+            <a class="nav-link text-white" href="https://www.facebook.com" target="_blank"><i class="fa fa-lg fa-facebook"></i></a>
+        </li>
+        <li>
+            <a class="nav-link text-white" href="https://www.linkedin.com" target="_blank"><i class="fa fa-lg fa-linkedin"></i></i></a>
+        </li>
+        <li>
+            <a class="nav-link text-white" href="https://twitter.com/" target="_blank"><i class="fa fa-lg fa-twitter"></i></a>
+        </li>
+        <li>
+            <a class="nav-link text-white" href="https://slack.com/" target="_blank"><i class="fa fa-lg fa-slack"></i></a>
+        </li>
+      </br>
+        <small class="text-white pl-5">connect with me</small>
+
+      </ul>
+        
+        
+       
+        
+    </div>
+    
+
   </div>
+
+  <!-- Social media -->
+
+ 
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <h4 class="text-white">Nusrat Jahan - 300967157</h4>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
