--- a/views/contacts/index.ejs
+++ b/views/contacts/index.ejs
@@ -1,36 +1,45 @@
 <%include ../partials/header.ejs %>
+
+<div id="contactPage">
+    <h3 class="m-3 p-3 text-center text-primary">Leave your information below: </h3>
+    <fieldset class="w-85 p-5">
+
+        <form class="form" method="POST" action="/contact">
+          <div class="form-group">
+            <label for="FirstNameTextField">First Name</label>
+            <input type="text" placeholder="Enter First Name" class="form-control" id="FirstNameTextField"
+              name="firstName" required>
+          </div>
+          <div class="form-group">
+            <label for="LastNameTextField">Last Name</label>
+            <input type="text" placeholder="Enter Last Name" class="form-control" id="LastNameTextField"
+              name="lastName" required>
+          </div>
+          <div class="form-group">
+            <label for="ContactNumTextField">Contact number</label>
+            <input type="text" placeholder="Enter phone number" class="form-control" id="ContactNumTextField"
+              name="contactNumber" required>
+          </div>
+      
+          <div class="form-group">
+            <label for="EmailTextField">Email address</label>
+            <input type="text" placeholder="Enter email address" class="form-control" id="EmailTextField"
+              name="email" required>
+          </div>
+          <div class="form-group">
+            <label for="MessageTextField">Message</label>
+            <textarea placeholder="Leave me your message" rows="5" class="form-control" id="MessageTextField"
+              name="message" required></textarea>
+          </div>
+      
+          <button type="submit" class="btn btn-primary">
+            <i class="fa fa-check-square-o"></i> Submit</button>
+        </form>
+    
+    </fieldset>
+    
+
+</div>
   
-<h3>Leave your information below: </h3>
-    <form class="form" method="POST" action="/contact">
-      <div class="form-group">
-        <label for="FirstNameTextField">First Name</label>
-        <input type="text" placeholder="Enter First Name" class="form-control" id="FirstNameTextField"
-          name="firstName" required>
-      </div>
-      <div class="form-group">
-        <label for="LastNameTextField">Last Name</label>
-        <input type="text" placeholder="Enter Last Name" class="form-control" id="LastNameTextField"
-          name="lastName" required>
-      </div>
-      <div class="form-group">
-        <label for="ContactNumTextField">Contact number</label>
-        <input type="text" placeholder="Enter phone number" class="form-control" id="ContactNumTextField"
-          name="contactNumber" required>
-      </div>
-  
-      <div class="form-group">
-        <label for="EmailTextField">Email address</label>
-        <input type="text" placeholder="Enter email address" class="form-control" id="EmailTextField"
-          name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="MessageTextField">Message</label>
-        <input type="text" placeholder="Leave me your message" class="form-control" id="MessageTextField"
-          name="message" required>
-      </div>
-  
-      <button type="submit" class="btn btn-primary">
-        <i class="fa fa-check-square-o"></i> Submit</button>
-    </form>
 
     <%include ../partials/footer.ejs %>
