--- a/views/contacts/contactinfo.ejs
+++ b/views/contacts/contactinfo.ejs
@@ -1,12 +1,29 @@
+<!--
+
+/**
+  * file name: contactinfo.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
 <%include ../partials/header.ejs %>
 
-      <p> <%= title %></p>
-      <p> Name: <%= contactInfo.lastName %>, <%= contactInfo.firstName %></p>
-      <p> Contact Number: <%= contactInfo.contactNumber %></p>
-      <p> Email address: <%= contactInfo.email %></p>
-      <p> Message: <%= contactInfo.message %></p>
+<!-- Shows contact information -->
 
-      <a class="btn btn-primary" href="/" role="button">Back to home page</a>
-  
+<div id="contactInfoPage">
+    <div class="m-5 p-5 font-weight-bolder">
+        <h4 class="text-primary"> <%= title %></h4>
+        <p> Name: <%= contactInfo.lastName %>, <%= contactInfo.firstName %></p>
+        <p> Contact Number: <%= contactInfo.contactNumber %></p>
+        <p> Email address: <%= contactInfo.email %></p>
+        <p> Message: <%= contactInfo.message %></p>
 
-  <%include ../partials/footer.ejs %>
+    </div>
+    <a class="btn btn-primary" href="/" role="button">Back to home page</a>
+
+</div>
+
+<%include ../partials/footer.ejs %>
