--- a/views/home/about.ejs
+++ b/views/home/about.ejs
@@ -1,9 +1,22 @@
+<!--
+
+/**
+  * file name: about.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
 <%include ../partials/header.ejs %>
 
+<!-- About me page -->
 <div id="aboutPage">
 
   <div style="float: left;" class="p-5 m-5">
 
+    <!-- Profile pic -->
     <figure>
       <img src="Assets/images/Nusrat_pic.jpg" alt="Nusrat profile pic"
         style="width:175px; height:275px; border: 1px solid #000;" />
@@ -11,16 +24,18 @@
     </figure>
   </div>
 
-  <div class="w-75 ml-5 p-5">  
-      <h4 class="m-5 p-5 text-center">I am a student of Software Engineering Technology in Centennial College.</br>
-        Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</h4>
+  <!-- My current information -->
+  <div class="w-75 ml-5 p-5">
+    <h4 class="m-5 p-5 text-center">I am a student of Software Engineering Technology in Centennial College.</br>
+      Currently, I am completing my co-op work term at Children, Youth and Social Services I+IT Cluster (CYSSC)</h4>
 
-      <div class="ml-5 p-3 text-center">
-        <a class="btn btn-info" href="/Assets/files/Nusrat_Resume.pdf" alt="Nusrat resume" target="_blank"
-          role="button">Have a look in my resume</a></br></br>
-        <a class="btn btn-info" href="/projects" role="button">Check my project works</a>
+    <!-- Resume -->
+    <div class="ml-5 p-3 text-center">
+      <a class="btn btn-info" href="/Assets/files/Nusrat_Resume.pdf" alt="Nusrat resume" target="_blank"
+        role="button">Have a look in my resume</a></br></br>
+      <a class="btn btn-info" href="/projects" role="button">Check my project works</a>
 
-      </div>
+    </div>
 
   </div>
 
