--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,22 +1,38 @@
+<!--
+
+/**
+  * file name: index.ejs // home page
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
+<!-- Home page -->
+
 <%include ../partials/header.ejs %>
 
 <div class="jumbotron jumbotron-fluid mb-0" id="homePage">
 
-<div class="container text-white text-center">
+  <div class="container text-white text-center">
 
+    <!-- welcome message -->
     <h3 class="display-4 mb-5">Be peace upon you all! </h3>
-    
+
     <h3 class="display-5 mt-5 mb-5">Welcome!!</br>
       This is the online portfolio of <strong class="font-italic text-danger">Nusrat Jahan</strong>,</br>
       student of Software Engineering Technology,</br>
       Centennial College.
     </h3>
- 
-    <h3><blockquote class="font-italic mb-5">I make people tell their stories through web.</blockquote></h3>
-  
+
+    <h3>
+      <blockquote class="font-italic mb-5">I make people tell their stories through web.</blockquote>
+    </h3>
+
     <a class="btn btn-primary mt-5" href="/about" role="button">Know more About Me</a>
-  
-</div>  
+
+  </div>
 </div>
 
 <%include ../partials/footer.ejs %>
