--- a/views/home/project.ejs
+++ b/views/home/project.ejs
@@ -1,3 +1,15 @@
+<!--
+
+/**
+  * file name: project.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
+<!-- Project page -->
 <%include ../partials/header.ejs %>
 
 <div id="projectPage">
@@ -5,7 +17,7 @@
   <div>
 
     <h3 class="text-primary font-weight-bold projecthead">
-        My Project works in Centennial College</h3>
+      My Project works in Centennial College</h3>
     <div class="ml-auto mr-auto pl-5 w-75">
 
       <!--  Description and imges of projects -->
@@ -57,38 +69,15 @@
               represented natural beauty of my home country through this website.</br>
               In this project, I used Ubuntu which is a free and open-source Linux distribution based on Debian.
               By this work, I learned how to manage files, use UNIX utilities and develope scripts.
-
-
-
             </p>
           </td>
           <td class="text-center pt-5"><img src="./Assets/images/Project03.png"
               alt="Unix/Linux Operating System project" style="width:300px; height:300px;"></td>
 
         </tr>
-
-        <!--  Project 04 
-                    <tr class="table-secondary">
-                        
-                        <td><img src="./Assets/images/Project04.jpg" alt=""
-                          style="width:300px; height:300px;"></td>
-                          <td class="text-center pt-5 w-50 font-weight-bold text-dark">Programming 3</br>
-                            with C# .Net Core
-                            <p>
-
-                            </p>
-                          </td>
-            
-                      </tr>
-                    -->
-
-
       </table>
 
-
-
     </div>
-
 
   </div>
 </div>
