--- a/views/home/service.ejs
+++ b/views/home/service.ejs
@@ -1,111 +1,121 @@
+<!--
+
+/**
+  * file name: service.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
+<!-- Service page -->
 <%include ../partials/header.ejs %>
 
 <div id="servicePage">
 
   <!-- Services (List of Technical qualifications)-->
-  
-    <div class="bg-light m-5 pb-5">
 
-      <h5 class="text-dark text-center font-weight-bold servicehead">
-        As a Software Engineer, I feel passionate in programming and developing websites.
-        </br>I devote my time and efforts into researching and developing new softwares.
-        </br>Moreover,
-        I evaluate the existing problems and issues that users encounter and come up with new ideas and solutions. </br>
-      </h5>
+  <div class="bg-light m-5 pb-5">
 
-      <div>
-        <p class="font-weight-bold ml-5">
-
-          I am proficient at:</p>
-
-        <ul class="font-weight-bold ml-5">
-          <li>
-            programming with <code> Java </code> and .Net languages such as <code> C++, C# </code>
-          </li>
-          <li>
-            client-side and server-side languages such as <code>Html 5, CSS 3, Bootstrap 4, </br>
-                      JavaScripts, Node.js, Express.js, ASP.Net Core </code> and others
-
-          </li>
-          <li>
-            Database management systems using <code>SQL Developer, MongoDb </code>
-          </li>
-        </ul>
-
-      </div>
-
-    </div>
+    <h5 class="text-dark text-center font-weight-bold servicehead">
+      As a Software Engineer, I feel passionate in programming and developing websites.
+      </br>I devote my time and efforts into researching and developing new softwares.
+      </br>Moreover,
+      I evaluate the existing problems and issues that users encounter and come up with new ideas and solutions. </br>
+    </h5>
 
     <div>
-      <!-- Image gallery of my works -->
+      <p class="font-weight-bold ml-5">
 
-      <h4 class="text-center pb-3 text-primary">
-          <i class="fa fa-lg fa-image"></i> Image gallery of my works
+        I am proficient at:</p>
 
-      </h4>
-      <div id="imageGallery">
+      <ul class="font-weight-bold ml-5">
+        <li>
+          programming with <code> Java </code> and .Net languages such as <code> C++, C# </code>
+        </li>
+        <li>
+          client-side and server-side languages such as <code>Html 5, CSS 3, Bootstrap 4, </br>
+                      JavaScripts, Node.js, Express.js, ASP.Net Core </code> and others
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Assignment_Form.jpg">
-            <img src="../Assets/images/Assignment_Form.jpg" alt="Form Assignment" width="300" height="300">
-          </a>
-          <div class="desc">Web Interface Design </br>Teacher evaluation form</div>
-        </div>
+        </li>
+        <li>
+          Database management systems using <code>SQL Developer, MongoDb </code>
+        </li>
+      </ul>
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Assignment_methodology.jpg">
-            <img src="../Assets/images/Assignment_methodology.jpg" alt="Methodology Assignment" width="300"
-              height="300">
-          </a>
-          <div class="desc">Software Engineering Methodologies</div>
-        </div>
+    </div>
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Assignment_Nature.jpg">
-            <img src="../Assets/images/Assignment_Nature.jpg" alt="Web Assignment" width="300" height="300">
-          </a>
-          <div class="desc">Web Interface Design </br>Protected areas assignment</div>
-        </div>
+  </div>
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Assignment_tech.jpg">
-            <img src="../Assets/images/Assignment_tech.jpg" alt="technology Assignment" width="300" height="300">
-          </a>
-          <div class="desc">Web Interface Design </br>Technology assignment</div>
-        </div>
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Project01.jpg">
-            <img src="../Assets/images/Project01.jpg" alt="Car dealership assignment" width="300" height="300">
-          </a>
-          <div class="desc">Web Interface Design </br>Car dealership assignment</div>
-        </div>
+  <div>
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Project02.jpg">
-            <img src="../Assets/images/Project02.jpg" alt="Course handling assignment" width="300" height="300">
-          </a>
-          <div class="desc">Serverside Web Development</br>Course handling assignment</div>
-        </div>
+    <!-- Image gallery of my works -->
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Project03.png">
-            <img src="../Assets/images/Project03.png" alt="Unix/Linux operating System" width="300" height="300">
-          </a>
-          <div class="desc">Unix/Linux operating System</div>
-        </div>
+    <h4 class="text-center pb-3 text-primary">
+      <i class="fa fa-lg fa-image"></i> Image gallery of my works
 
-        <div class="gallery">
-          <a target="_blank" href="../Assets/images/Project04.jpg">
-            <img src="../Assets/images/Project04.jpg" alt="C# Programming" width="300" height="300">
-          </a>
-          <div class="desc">C# Programming</div>
-        </div>
+    </h4>
+    <div id="imageGallery">
 
-        
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Assignment_Form.jpg">
+          <img src="../Assets/images/Assignment_Form.jpg" alt="Form Assignment" width="300" height="300">
+        </a>
+        <div class="desc">Web Interface Design </br>Teacher evaluation form</div>
+      </div>
 
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Assignment_methodology.jpg">
+          <img src="../Assets/images/Assignment_methodology.jpg" alt="Methodology Assignment" width="300" height="300">
+        </a>
+        <div class="desc">Software Engineering Methodologies</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Assignment_Nature.jpg">
+          <img src="../Assets/images/Assignment_Nature.jpg" alt="Web Assignment" width="300" height="300">
+        </a>
+        <div class="desc">Web Interface Design </br>Protected areas assignment</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Assignment_tech.jpg">
+          <img src="../Assets/images/Assignment_tech.jpg" alt="technology Assignment" width="300" height="300">
+        </a>
+        <div class="desc">Web Interface Design </br>Technology assignment</div>
+      </div>
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Project01.jpg">
+          <img src="../Assets/images/Project01.jpg" alt="Car dealership assignment" width="300" height="300">
+        </a>
+        <div class="desc">Web Interface Design </br>Car dealership assignment</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Project02.jpg">
+          <img src="../Assets/images/Project02.jpg" alt="Course handling assignment" width="300" height="300">
+        </a>
+        <div class="desc">Serverside Web Development</br>Course handling assignment</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Project03.png">
+          <img src="../Assets/images/Project03.png" alt="Unix/Linux operating System" width="300" height="300">
+        </a>
+        <div class="desc">Unix/Linux operating System</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="../Assets/images/Project04.jpg">
+          <img src="../Assets/images/Project04.jpg" alt="C# Programming" width="300" height="300">
+        </a>
+        <div class="desc">C# Programming</div>
       </div>
 
     </div>
+
+  </div>
 
 </div>
 
