--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,15 @@
+<!--
+
+/**
+  * file name: header.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
