--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,14 @@
+<!--
+
+/**
+  * file name: footer.ejs
+  * Student name: Nusrat Jahan
+  * Student Id: 300967157
+  * Date: Feb 16, 2019
+  */
+
+-->
+
 <div id="footer">
     <p class="p-3">&copy;copyright - Nusrat Jahan, std. Id: 300967157, COMP 308 - Emerging Technology.</p>
 </div>
