updated images to work with heroku

--- a/views/home/service.ejs
+++ b/views/home/service.ejs
@@ -59,56 +59,56 @@
     <div id="imageGallery">
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Assignment_Form.jpg">
-          <img src="../Assets/images/Assignment_Form.jpg" alt="Form Assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Assignment_Form.jpg">
+          <img src="/Assets/images/Assignment_Form.jpg" alt="Form Assignment" width="300" height="300">
         </a>
         <div class="desc">Web Interface Design </br>Teacher evaluation form</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Assignment_methodology.jpg">
-          <img src="../Assets/images/Assignment_methodology.jpg" alt="Methodology Assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Assignment_methodology.jpg">
+          <img src="/Assets/images/Assignment_methodology.jpg" alt="Methodology Assignment" width="300" height="300">
         </a>
         <div class="desc">Software Engineering Methodologies</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Assignment_Nature.jpg">
-          <img src="../Assets/images/Assignment_Nature.jpg" alt="Web Assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Assignment_Nature.jpg">
+          <img src="/Assets/images/Assignment_Nature.jpg" alt="Web Assignment" width="300" height="300">
         </a>
         <div class="desc">Web Interface Design </br>Protected areas assignment</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Assignment_tech.jpg">
-          <img src="../Assets/images/Assignment_tech.jpg" alt="technology Assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Assignment_tech.jpg">
+          <img src="/Assets/images/Assignment_tech.jpg" alt="technology Assignment" width="300" height="300">
         </a>
         <div class="desc">Web Interface Design </br>Technology assignment</div>
       </div>
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Project01.jpg">
-          <img src="../Assets/images/Project01.jpg" alt="Car dealership assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Project01.jpg">
+          <img src="/Assets/images/Project01.jpg" alt="Car dealership assignment" width="300" height="300">
         </a>
         <div class="desc">Web Interface Design </br>Car dealership assignment</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Project02.jpg">
-          <img src="../Assets/images/Project02.jpg" alt="Course handling assignment" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Project02.jpg">
+          <img src="/Assets/images/Project02.jpg" alt="Course handling assignment" width="300" height="300">
         </a>
         <div class="desc">Serverside Web Development</br>Course handling assignment</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Project03.png">
-          <img src="../Assets/images/Project03.png" alt="Unix/Linux operating System" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Project03.png">
+          <img src="/Assets/images/Project03.png" alt="Unix/Linux operating System" width="300" height="300">
         </a>
         <div class="desc">Unix/Linux operating System</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="../Assets/images/Project04.jpg">
-          <img src="../Assets/images/Project04.jpg" alt="C# Programming" width="300" height="300">
+        <a target="_blank" href="/Assets/images/Project04.jpg">
+          <img src="/Assets/images/Project04.jpg" alt="C# Programming" width="300" height="300">
         </a>
         <div class="desc">C# Programming</div>
       </div>
