updated image sources

--- a/views/home/project.ejs
+++ b/views/home/project.ejs
@@ -34,7 +34,7 @@
               As it was an individual assignment, I created the whole website by myself.
             </p>
           </td>
-          <td><img src="/Assets/images/Project01.jpg" alt="Web Interface Design project"
+          <td><img src="Assets/images/Project01.JPG" alt="Web Interface Design project"
               style="width:300px; height:300px;"></td>
 
         </tr>
@@ -43,7 +43,7 @@
 
         <tr class="table-light">
 
-          <td class="text-center pt-5"><img src="/Assets/images/Project02.jpg"
+          <td class="text-center pt-5"><img src="Assets/images/Project02.JPG"
               alt="Client-side Web Development project" style="width:300px; height:300px;"></td>
           <td>
             <h4 class="text-center pt-5 text-dark">Client-side Web Development</br>
@@ -71,7 +71,7 @@
               By this work, I learned how to manage files, use UNIX utilities and develope scripts.
             </p>
           </td>
-          <td class="text-center pt-5"><img src="/Assets/images/Project03.png"
+          <td class="text-center pt-5"><img src="Assets/images/Project03.PNG"
               alt="Unix/Linux Operating System project" style="width:300px; height:300px;"></td>
 
         </tr>
